<resources>
    <string name="app_name">SayapRaja</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="selamat_datang_di_sayap_raja">Selamat Datang di SAYAP RAJA</string>
    <string name="silakan_masukan_username_dan_password_anda">Silakan Masukan Username dan Password Anda</string>
    <string name="silakan_masukan_data_diri_anda">Silakan Masukan Data Diri Anda</string>
    <string name="silakan_buat_lowongan">Mau buat lowongan pekerjaan apa di hari ini?</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="buat_lowongan">Buat Lowongan</string>
    <string name="search">Search</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="mau_cari_pekerjaan_apa_hari_ini">Mau cari pekerjaan apa hari ini?</string>
    <string name="masukkan_syarat">Masukkan Syarat</string>
    <string name="syarat">Syarat</string>
    <string name="masukkan_deskripsi">Masukkan Deskripsi</string>
    <string name="deskripsi_pekerjaan">Deskripsi Pekerjaan</string>
    <string name="masukkan_posisi">Masukkan Posisi</string>
    <string name="posisi_lowongan">Posisi Lowongan</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat_perusahaan">Alamat Perusahaan</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="masukkan_posisi_pekerjaan">Masukkan Posisi Pekerjaan</string>
    <string name="masukkan_kriteria">Masukkan Kriteria</string>
    <string name="posisi">Posisi</string>
    <string name="kriteria_pendukung">Kriteria Pendukung</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_tanggal_lahir">Masukkan Tanggal Lahir</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="masukkan_ulang_password">Masukkan Ulang Password</string>
    <string name="belum_punya_akun_silakan_klik_disini">Belum Punya Akun? Silakan Klik Disini</string>
    <string name="sudah_punya_akun_silahkan_klik_disini">Sudah Punya Akun? Silahkan Klik Disini</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="cari_lowongan">Cari Lowongan Pekerjaan</string>
    <string name="perusahaan">PT. CAHAYA ILAHI</string>
    <string name="position">Social Media Admin</string>
    <string name="date_add">20 Januari 2022</string>
    <string name="upload">UPLOAD</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sollicitudin vehicula mauris ut efficitur. Nam id ultricies elit. Curabitur pretium, augue nec ultrices eleifend, massa augue lacinia nisl, dignissim mollis sem ligula lacinia risus. Pellentesque vel diam felis. Sed eros tellus, finibus eget varius in, condimentum egestas magna.</string>
    <string name="logout">Logout</string>
    <string name="icon">icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete_this_job">Are you sure you want to delete this job?</string>
</resources>