<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="282dp"
                android:layout_height="168dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/formLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ImageView"
                app:layout_constraintVertical_bias="0.0">


                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/mplusrounded1c_bold"
                    android:text="@string/selamat_datang_di_sayap_raja"
                    android:textColor="?attr/mplusroundedBold"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/mplusrounded1c_medium"
                    android:text="@string/silakan_masukan_data_diri_anda"
                    android:textColor="?attr/mplusroundedMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/welcome" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname"
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/inputbg"
                    android:elevation="20dp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/masukkan_nama_lengkap"
                    android:paddingStart="20dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/instruction" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth"
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/inputbg"
                    android:elevation="20dp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/masukkan_tanggal_lahir"
                    android:paddingStart="20dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullname" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/inputbg"
                    android:elevation="20dp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/masukkan_nomor_telepon"
                    android:paddingStart="20dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/birth" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/inputbg"
                    android:elevation="20dp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/masukkan_username"
                    android:paddingStart="20dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="325dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/inputbg"
                    android:elevation="20dp"
                    android:fontFamily="@font/lato_medium"
                    android:hint="@string/masukkan_password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="146dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/roundedbutton"
                    android:elevation="20dp"
                    android:fontFamily="@font/mplusrounded1c_bold"
                    android:text="@string/daftar"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.471"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password" />

                <TextView
                    android:id="@+id/reg_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/mplusrounded1c_bold"
                    android:text="@string/belum_punya_akun_silakan_klik_disini"
                    android:textColor="?attr/mplusroundedBold"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.513"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_register" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>