<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp">
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <androidx.cardview.widget.CardView
           android:id="@+id/cardView"
           android:layout_width="216dp"
           android:layout_height="146dp"
           android:layout_marginTop="50dp"
           app:cardCornerRadius="10dp"
           app:cardElevation="0dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <ImageView
               android:id="@+id/company_photo"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               android:src="@drawable/assets3" />
       </androidx.cardview.widget.CardView>

       <TextView
           android:id="@+id/corp_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="32dp"
           android:text="@string/nama_perusahaan"
           app:layout_constraintEnd_toEndOf="@+id/cardView"
           app:layout_constraintStart_toStartOf="@+id/cardView"
           app:layout_constraintTop_toBottomOf="@+id/cardView" />

       <TextView
           android:id="@+id/phone_number"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:text="@string/nomor_telepon"
           app:layout_constraintEnd_toEndOf="@+id/corp_name"
           app:layout_constraintStart_toStartOf="@+id/corp_name"
           app:layout_constraintTop_toBottomOf="@id/corp_name"
           tools:layout_editor_absoluteY="283dp" />

       <TextView
           android:id="@+id/title_job_position"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:fontFamily="@font/lato_bold"
           android:text="@string/posisi"
           android:textSize="14sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.081"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/phone_number"
           app:layout_constraintVertical_bias="0.116" />



       <TextView
           android:id="@+id/tv_job_position"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:fontFamily="@font/lato_medium"
           android:text="@string/lorem"
           android:textSize="14sp"

           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="1.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_job_position"
           app:layout_constraintVertical_bias="0.024" />

       <TextView
           android:id="@+id/title_job_desc"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:fontFamily="@font/lato_bold"
           android:text="@string/deskripsi_pekerjaan"
           android:textSize="14sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.081"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/tv_job_position"

           app:layout_constraintVertical_bias="0.116" />

       <TextView
           android:id="@+id/tv_job_desc"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:fontFamily="@font/lato_medium"
           android:text="@string/lorem"
           android:textSize="14sp"

           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="1.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_job_desc"
           app:layout_constraintVertical_bias="0.024" />

       <TextView
           android:id="@+id/requirement"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:fontFamily="@font/lato_bold"
           android:text="@string/syarat"
           android:textSize="14sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.081"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tv_job_desc"
           app:layout_constraintVertical_bias="0.116" />

       <TextView
           android:id="@+id/tv_job_req"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:fontFamily="@font/lato_medium"
           android:text="@string/lorem"
           android:textSize="14sp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="1.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/requirement"
           app:layout_constraintVertical_bias="0.024" />

       <androidx.core.widget.NestedScrollView
           android:layout_width="390dp"
           android:layout_height="320dp"
           android:layout_marginTop="16dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.4"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/tv_job_req"
           app:layout_constraintVertical_bias="0.052">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/rv_list_job_applicant"
                   android:layout_width="390dp"
                   android:layout_height="320dp"
                   android:layout_marginStart="8dp"
                   android:layout_marginTop="8dp"
                   android:layout_marginEnd="8dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintBaseline_toBottomOf="parent"
                   tools:listitem="@layout/item_job_applicant" />

           </androidx.constraintlayout.widget.ConstraintLayout>

       </androidx.core.widget.NestedScrollView>

   </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>